todo/media/bazarr/bazarr-deployment.yaml
# bazarr deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  selector:
    matchLabels:
      app: bazarr
  replicas: 1
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        # kubernetes.io/hostname: rocky
      containers:
      - name: bazarr
        image: ghcr.io/hotio/bazarr
        ports:
        - containerPort: 6767
        volumeMounts:
        - mountPath: /media/Shows
          name: external-shows
        - mountPath: /media/Movies1
          name: movies1
        - mountPath: /media/Movies2
          name: movies2
        - mountPath: /config
          name: bazarr-config
      volumes:
        - name: external-shows
          nfs:
            server: 192.168.0.113
            path: /mnt/external/Shows
        - name: movies1
          nfs:
            server: 192.168.0.113
            path: /mnt/movies1/Movies
        - name: movies2
          nfs:
            server: 192.168.0.113
            path: /mnt/movies2/Movies
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
---
