todo/media/bazarr/bazarr-ingress.yaml
# Jellyfin Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: bazarr.zemn.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              number: 6767
  tls:
  - hosts:
    - "*.zemn.xyz"
    secretName: zemn-wildcard-tls
